# cannyforge

./: .env.example  CNAME  CONTRIBUTING.md  LICENSE  README.md  demo_cannyforge.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: ablation_report.py  bench_fsi80.py  compare_runs.py  eval_trace.py  scenario_harness.py
benchmark/data/: fsi80_tasks.json
benchmark/skills/fsi-workflow/: SKILL.md
cannyforge/: __init__.py  cli.py  core.py  corrections.py  dashboard.py  export.py  failures.py  knowledge.py  learning.py  llm.py  mcp_server.py  registry.py  skills.py  storage.py  tools.py  workers.py
cannyforge/adapters/: __init__.py  crewai.py  langchain.py  langgraph.py
cannyforge/bundled_skills/calendar-manager/: SKILL.md
cannyforge/bundled_skills/content-summarizer/: SKILL.md
cannyforge/services/: crm_service.py  email_service.py  mock_calendar_mcp.py  service_base.py  slack_service.py  web_search_api.py
docs/: ABLATION_CASE_MCP_001.md  BLOG_AGENT_SKILLS_LEARNING.md  BLOG_CLOSED_LOOP_AGENT_RELIABILITY.md  HARNESS_BENCHMARK_SPEC.md  v0.3-public.md
examples/: quickstart.py
scenarios/: demo.py  demo_cannyforge.py  demo_langgraph_real.py  demo_langgraph_tool_use.py  eval_e2e.py  scenario_email.py  scenario_tool_use.py
scenarios/archive/: demo_e2e.py  demo_tool_use_real.py
tests/: conftest.py  test_bench_fsi80.py  test_core_portability.py  test_corrections.py  test_declarative_skill.py  test_eval_trace.py  test_integration.py  test_knowledge.py  test_langgraph_adapter.py  test_learning.py  test_llm.py  test_production.py  test_scenario_harness.py  test_skill_loader.py  test_spec_compliance.py  test_tool_use_skill.py  test_tools.py
(+25 files in other folders)
